--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,21 @@ find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 find_package(PCL 1.8 REQUIRED)
 find_package(Boost 1.54 COMPONENTS filesystem system program_options REQUIRED)
 
+add_library(viewer src/viewer.cpp)
+target_include_directories(viewer PRIVATE ${PCL_INCLUDE_DIRS} src)
+target_link_libraries(viewer PUBLIC ${PCL_LIBRARIES})
+
 add_library(icp_LM src/icp_LM.cpp src/viewer.cpp)
 target_include_directories(icp_LM PRIVATE ${Eigen3_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} src)
-target_link_libraries(icp_LM PUBLIC fmt::fmt ${PCL_LIBRARIES})
+target_link_libraries(icp_LM PUBLIC fmt::fmt viewer)
 
-add_executable(main src/main.cpp)
-target_include_directories(icp_LM PRIVATE ${PCL_INCLUDE_DIRS} src)
-target_link_libraries(main PRIVATE icp_LM)
+add_executable(pcd_alignment src/pcd_alignment.cpp)
+target_include_directories(pcd_alignment PRIVATE ${PCL_INCLUDE_DIRS} src)
+target_link_libraries(pcd_alignment PRIVATE icp_LM viewer)
+
+add_executable(continuous_icp src/continuous_icp.cpp)
+target_include_directories(continuous_icp PRIVATE ${PCL_INCLUDE_DIRS} src)
+target_link_libraries(continuous_icp PRIVATE icp_LM)
 
 add_executable(test test/test.cpp)
 target_include_directories(test PRIVATE ${Eigen3_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Catch2_INCLUDE_DIRS} src)
