handle toml, Catch2, fmt with FetchContent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,8 @@ add_compile_definitions(PARAMS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/params")
 
 # find_package(Ceres 2.1.0 REQUIRED)
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
-find_package(PCL 1.8 REQUIRED)
-find_package(fmt 9 REQUIRED)
-find_package(toml11 REQUIRED)
-find_package(Catch2 3)
+find_package(PCL 1.10.0 EXACT REQUIRED)
+include(${CMAKE_CURRENT_SOURCE_DIR}/ext/ext.cmake)
 
 add_library(viewer src/viewer.cpp)
 target_include_directories(viewer PRIVATE ${PCL_INCLUDE_DIRS} src)
@@ -19,12 +17,12 @@ target_link_libraries(viewer PUBLIC ${PCL_LIBRARIES})
 
 add_executable(icp_lm src/icp_lm/main.cpp src/icp_lm/icp_lm.cpp)
 target_include_directories(icp_lm PRIVATE ${PCL_INCLUDE_DIRS} src)
-target_link_libraries(icp_lm PRIVATE fmt::fmt-header-only viewer Eigen3::Eigen ${PCL_LIBRARIES})
+target_link_libraries(icp_lm PRIVATE fmt::fmt-header-only toml11 viewer Eigen3::Eigen ${PCL_LIBRARIES})
 target_compile_options(icp_lm PRIVATE -Wall -Weffc++ -Wpedantic -ffast-math -Wextra)
 
 add_executable(sac_ia_gicp src/sac_ia_gicp/sac_ia_gicp.cpp)
 target_include_directories(sac_ia_gicp PRIVATE src ext ${PCL_INCLUDE_DIRS})
-target_link_libraries(sac_ia_gicp fmt::fmt-header-only Eigen3::Eigen ${PCL_LIBRARIES})
+target_link_libraries(sac_ia_gicp fmt::fmt-header-only Eigen3::Eigen toml11 ${PCL_LIBRARIES})
 target_compile_options(sac_ia_gicp PRIVATE -Wall -Weffc++ -Wpedantic -ffast-math -Wextra)
 
 # add_executable(pcd_alignment_ceres src/pcd_alignment_ceres.cpp)
@@ -39,8 +37,6 @@ target_compile_options(sac_ia_gicp PRIVATE -Wall -Weffc++ -Wpedantic -ffast-math
 # target_include_directories(extract_features PRIVATE ${PCL_INCLUDE_DIRS} src)
 # target_link_libraries(extract_features PRIVATE viewer fmt::fmt)
 
-if (Catch2_FOUND)
-    add_executable(test test/test.cpp)
-    target_include_directories(test PRIVATE ${Eigen3_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Catch2_INCLUDE_DIRS} src)
-    target_link_libraries(test PRIVATE Catch2::Catch2WithMain fmt::fmt Eigen3::Eigen ${PCL_LIBRARIES})
-endif()
+add_executable(test test/test.cpp)
+target_include_directories(test PRIVATE ${Eigen3_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Catch2_INCLUDE_DIRS} src)
+target_link_libraries(test PRIVATE Catch2::Catch2WithMain fmt::fmt Eigen3::Eigen ${PCL_LIBRARIES})
